--- a/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
@@ -1272,35 +1272,42 @@
 	status = "okay";
 };
 
-/* SDIO */
-//&sd_emmc_a {
-//	status = "disabled";
-//	pinctrl-0 = <&sdio_pins>;
-//	pinctrl-1 = <&sdio_clk_gate_pins>;
-//	pinctrl-names = "default", "clk-gate";
-//	#address-cells = <1>;
-//	#size-cells = <0>;
-//
-//	bus-width = <4>;
-//	cap-sd-highspeed;
-//	sd-uhs-sdr50;
-//	sd_uhs-sdr104;
-//	max-frequency = <200000000>;
-//
-//	non-removable;
-//	disable-wp;
-//
-//	//vmmc-supply = <&vddao_3v3>;
-//	//vqmmc-supply = <&vddio_ao1v8>;
-//
+/* SD wifi */
+&sd_emmc_b {
+	status = "okay";
+	pinctrl-0 = <&sd_all_pins>;
+//	pinctrl-1 = <&sd_1bit_pins>;
+	pinctrl-1 = <&sd_clk_gate_pins>;
+	pinctrl-names = "default",
+	//		"sd_1bit_pins",
+			"clk-gate";
+	bus-width = <4>;
+	cap-sd-highspeed;
+	sd-uhs-sdr12;
+	sd-uhs-sdr25;
+	sd-uhs-sdr50;
+	sd-uhs-sdr104;
+	max-frequency = <200000000>;
+
+	non-removable;
+	disable-wp;
+//	amlogic,dram-access-quirk;
+
+//	cd-gpios = <&gpio GPIOC_10 GPIO_ACTIVE_HIGH>;
+	//dat1-gpios = <&gpio GPIOC_1 GPIO_ACTIVE_HIGH>;
+	//vmmc-supply = <&vddao_3v3>;
+	//vqmmc-supply = <&emmc_1v8>;
+
 //	brcmf: wifi@1 {
 //		reg = <1>;
 //		compatible = "brcm,bcm4329-fmac";
 //	};
-//};
+
+};
+
 
 /* SD card */
-&sd_emmc_b {
+/*&sd_emmc_b {
 	status = "okay";
 	pinctrl-0 = <&sd_all_pins>;
 	pinctrl-1 = <&sd_1bit_pins>;
@@ -1324,6 +1331,8 @@
 	//vmmc-supply = <&vddao_3v3>;
 	//vqmmc-supply = <&emmc_1v8>;
 };
+*/
+
 
 &sd_emmc_c {
 	status = "okay";
