T3: enable reboot & vrtc in dts [1/1]
PD#SWPL-47429

Problem:
T3 bringup for reboot/vrtc

Solution:
Enable it in dts

Verify:
T3_T982_AR301

Change-Id: I8e31e5723d82ce2ded010ad7ae9350c6ad2c7947
Signed-off-by: Qiufang Dai <qiufang.dai@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -212,6 +212,18 @@
 		status = "okay";
 	};
 
+	vrtc: rtc@0xfe010288 {
+		compatible = "amlogic,meson-vrtc";
+		reg = <0x0 0xfe010288 0x0 0x4>; //SYSCTRL_STATUS_REG2
+	};
+
+	aml_reboot {
+		compatible = "aml, reboot";
+		sys_reset = <0x84000009>;
+		sys_poweroff = <0x84000008>;
+		dis_nb_cpus_in_shutdown;
+	};
+
 	mhu_fifo: mhu@0 {
 		status = "okay";
 		compatible = "amlogic, meson_mhu_fifo";
