dts: add ah212 mxl258c. [1/3]
PD#SWPL-48158

Problem:
add ah212 mxl258c.

Solution:
add ah212 mxl258c.

Verify:
verified by ah212.

Change-Id: Ic8e4c1be8616c702c58f6ee80e5a183930bfb216
Signed-off-by: nengwen.chen <nengwen.chen@amlogic.com>
Signed-off-by: Luan Yuan <luan.yuan@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -14,6 +14,8 @@ dtb-y += t7_pop1_an40a1.dtb
 dtb-y += t7_pop1_t319.dtb
 dtb-y += sc2_s905x4_ah212.dtb
 dtb-y += sc2_s905x4_ah212_drm.dtb
+dtb-y += sc2_s905x4_ah212_mxl258c.dtb
+dtb-y += sc2_s905x4_ah212_mxl258c_drm.dtb
 dtb-y += sc2_s905x4_ah219.dtb
 dtb-y += sc2_s905x4_ah219_drm.dtb
 dtb-y += t5d_t950d4_am301_1g.dtb
