Revert "T7: optimize the memory size. [1/1]"
This reverts commit a585c09a18ea79c9eb7e5388e464a199e1acc586.

Signed-off-by: renjiang.han <renjiang.han@amlogic.com>
Change-Id: Ib8d4a1f1c8d92a7be24eb189c8a4f84c6c512cdf

--- a/arch/arm64/boot/dts/amlogic/t7_a311d2_an400.dts
+++ b/arch/arm64/boot/dts/amlogic/t7_a311d2_an400.dts
@@ -103,7 +103,7 @@
 			compatible = "shared-dma-pool";
 			reusable;
 			/* ion_codec_mm max can alloc size 80M*/
-			size = <0x0 0xfc00000>;
+			size = <0x0 0x1b000000>;
 			alignment = <0x0 0x400000>;
 			linux,contiguous-region;
 			clear-map;
@@ -150,7 +150,7 @@
 		ion_cma_reserved:linux,ion-dev {
 			compatible = "shared-dma-pool";
 			reusable;
-			size = <0x0 0x5000000>;
+			size = <0x0 0x9800000>;
 			alignment = <0x0 0x400000>;
 		};
 		/* codec shared reserved */
