--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -977,7 +977,7 @@
 			ranges = <0x0 0x0 0x0 0xfe333000 0x0 0x1000>;
 
 			earc: earc@0 {
-				compatible = "amlogic, sm1-snd-earc";
+				compatible = "amlogic, t7-snd-earc";
 				#sound-dai-cells = <0>;
 
 				status = "disabled";
