--- a/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
@@ -66,6 +66,14 @@
 			alloc-ranges = <0x0 0x3f800000 0x0 0x800000>;
 		};
 
+		lcd_tcon_reserved:linux,lcd_tcon {
+			compatible = "shared-dma-pool";
+			reusable;
+			size = <0x0 0x00c00000>;
+			alignment = <0x0 0x400000>;
+			alloc-ranges = <0x0 0x3ec00000 0x0 0x00c00000>;
+		};
+
 		ion_cma_reserved:linux,ion-dev {
 			compatible = "shared-dma-pool";
 			reusable;
