--- a/arch/arm64/boot/dts/amlogic/meson-ir-map.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-ir-map.dtsi
@@ -6,10 +6,11 @@
 / {
 
 	custom_maps: custom_maps {
-		mapnum = <3>;
+		mapnum = <4>;
 		map0 = <&map_0>;
 		map1 = <&map_1>;
 		map2 = <&map_2>;
+		map3 = <&map_3>;
 		map_0: map_0{
 			mapname = "amlogic-remote-1";
 			customcode = <0xfb04>;
@@ -150,6 +151,50 @@
 				REMOTE_KEY(0x9c,KEY_PROPS)
 				REMOTE_KEY(0x9a,KEY_SCALE)
 				REMOTE_KEY(0xcd,KEY_KPCOMMA)>;
+		};
+		map_3: map_3{
+			mapname = "amlogic-remote-4";
+			customcode = <0x7788>;
+			release_delay = <80>;
+			size  = <38>;   /*keymap size*/
+			keymap = <REMOTE_KEY(0x01, KEY_1)
+				REMOTE_KEY(0x02, KEY_2)
+				REMOTE_KEY(0x03, KEY_3)
+				REMOTE_KEY(0x04, KEY_4)
+				REMOTE_KEY(0x05, KEY_5)
+				REMOTE_KEY(0x06, KEY_6)
+				REMOTE_KEY(0x07, KEY_7)
+				REMOTE_KEY(0x08, KEY_8)
+				REMOTE_KEY(0x09, KEY_9)
+				REMOTE_KEY(0x0A, KEY_0)
+				REMOTE_KEY(0x58, KEY_FN_F6)
+				REMOTE_KEY(0x29, KEY_INFO)
+				REMOTE_KEY(0x74, KEY_BOOKMARKS)
+				REMOTE_KEY(0x46, KEY_SEARCH)
+				REMOTE_KEY(0x0F, KEY_SETUP)
+				REMOTE_KEY(0x15, KEY_UP)
+				REMOTE_KEY(0x16, KEY_DOWN)
+				REMOTE_KEY(0x17, KEY_LEFT)
+				REMOTE_KEY(0x18, KEY_RIGHT)
+				REMOTE_KEY(0x19, KEY_ENTER)
+				REMOTE_KEY(0x47, KEY_HOME)
+				REMOTE_KEY(0x48, KEY_BACK)
+				REMOTE_KEY(0x32, KEY_HELP)
+				REMOTE_KEY(0x21, KEY_POWER)
+				REMOTE_KEY(0x60, KEY_FN_F1)
+				REMOTE_KEY(0x25, KEY_MUTE)
+				REMOTE_KEY(0x23, KEY_VOLUMEUP)
+				REMOTE_KEY(0x24, KEY_VOLUMEDOWN)
+				REMOTE_KEY(0x63, KEY_F17)
+				REMOTE_KEY(0x64, KEY_F18)
+				REMOTE_KEY(0x67, KEY_F19)
+				REMOTE_KEY(0x68, KEY_F20)
+				REMOTE_KEY(0x33, KEY_CHANNELUP)
+				REMOTE_KEY(0x34, KEY_CHANNELDOWN)
+				REMOTE_KEY(0x4B, KEY_RED)
+				REMOTE_KEY(0x4A, KEY_GREEN)
+				REMOTE_KEY(0x49, KEY_YELLOW)
+				REMOTE_KEY(0x4C, KEY_BLUE)>;
 		};
 	};
 };
