ionvideo: t3 dts add ionvideo [1/1]
PD#SWPL-48029

Problem:
omx can not open ionvideo

Solution:
dts add ionvideo

Verify:
t3

Change-Id: Id0c052329f07585d4ba4d6131bb04a0cc7d76079
Signed-off-by: jintao xu <jintao.xu@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
@@ -180,6 +180,12 @@
 		status = "okay";
 	};
 
+	ionvideo {
+		compatible = "amlogic, ionvideo";
+		dev_name = "ionvideo";
+		status = "okay";
+	};
+
 	picdec {
 		compatible = "amlogic, picdec";
 		memory-region = <&picdec_cma_reserved>;
