--- a/arch/arm64/boot/dts/amlogic/t3_t965d4_ar331.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t965d4_ar331.dts
@@ -180,6 +180,12 @@
 		status = "okay";
 	};
 
+	ionvideo {
+		compatible = "amlogic, ionvideo";
+		dev_name = "ionvideo";
+		status = "okay";
+	};
+
 	picdec {
 		compatible = "amlogic, picdec";
 		memory-region = <&picdec_cma_reserved>;
