frc: add film dec fw [1/1]
PD#SWPL-46374

Problem:
add film mode fw

Solution:
chip bringup, add frc film mode fw

Verify:
t3

Change-Id: I205b561d9d714230ef736e1de46bf39f4444657e
Signed-off-by: Yong Qin <yong.qin@amlogic.com>

--- a/drivers/amlogic/media/frc/Makefile
+++ b/drivers/amlogic/media/frc/Makefile
@@ -17,3 +17,5 @@ $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_mc.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_interface.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_buf.o
 $(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_hw.o
+$(MEDIA_MODULE_NAME)-$(CONFIG_AMLOGIC_MEDIA_FRC) += frc/frc_phase_table.o
+
