--- a/arch/arm64/boot/dts/amlogic/t3_pxp.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_pxp.dts
@@ -21,6 +21,7 @@
 		tsensor0 = &cpu_tsensor;
 		tsensor1 = &nna_tsensor;
 		tsensor2 = &vpu_tsensor;
+		spi0 = &spifc;
 		spi1 = &spicc0;
 		spi2 = &spicc1;
 		spi3 = &spicc2;
