lcd: add backlight dts setting for T5D [1/1]
PD#SWPL-47557

Problem:
no backlight control

Solution:
update t5d panel dts

Verify:
am301

Change-Id: I551b428ab32c98111c7264297de5a0c08cd48c23
Signed-off-by: Yuning Chen <yuning.chen@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont5d_reva_am301-panel.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont5d_reva_am301-panel.dtsi
@@ -415,11 +415,11 @@
 
 	bl_pwm_conf:bl_pwm_conf{
 		pwm_channel_0 {
-			pwm_port_index = <4>;
+			pwm_port = "PWM_E";
 			pwms = <&pwm_ef MESON_PWM_0 30040 0>;
 		};
 		pwm_channel_1 {
-			pwm_port_index = <5>;
+			pwm_port = "PWM_F";
 			pwms = <&pwm_ef MESON_PWM_1 30040 0>;
 		};
 	};
