--- a/arch/arm64/configs/meson64_a64_R_defconfig
+++ b/arch/arm64/configs/meson64_a64_R_defconfig
@@ -392,6 +392,7 @@ CONFIG_PINCTRL_MESON_SC2=y
 CONFIG_PINCTRL_MESON_T5D=y
 CONFIG_PINCTRL_MESON_T7=y
 CONFIG_PINCTRL_MESON_S4=y
+CONFIG_PINCTRL_MESON_T3=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_AVS=y
 # CONFIG_HWMON is not set
@@ -575,6 +576,7 @@ CONFIG_COMMON_CLK_SC2=y
 CONFIG_COMMON_CLK_T5D=y
 CONFIG_COMMON_CLK_T7=y
 CONFIG_COMMON_CLK_S4=y
+CONFIG_COMMON_CLK_T3=y
 CONFIG_HWSPINLOCK=y
 CONFIG_MAILBOX=y
 # CONFIG_IOMMU_SUPPORT is not set
