DV: add dovi function at T3 related chip [1/1]
PD#SWPL-48745

Problem:
add dovi function at T3 related chip

Solution:
add dovi function at T3 related chip

Verify:
t3

Change-Id: Ib3ad5cd25534a2bf00715676117337ab68f8c5c3
Signed-off-by: yuhui.zhang <yuhui.zhang@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1336,6 +1336,13 @@
 		clock-names = "cts_vid_lock_clk";
 	};
 
+	amdolby_vision {
+		compatible = "amlogic, dolby_vision_t3";
+		dev_name = "aml_amdolby_vision_driver";
+		status = "okay";
+		tv_mode = <1>;/*1:enabel ;0:disable*/
+	};
+
 	mesonstream {
 		compatible = "amlogic, codec, streambuf";
 		dev_name = "mesonstream";
