drm: add hdcp auth and optimize hdmitx flow [1/1]
PD#SWPL-48332

Problem:
hdcp auth not run

Solution:
add hdcp auth and optimize hdmitx flow

Verify:
ah212

Change-Id: Iaf7951fd50638c6f3014e6cd52056b0c3d050cf8
Signed-off-by: hang cheng <hang.cheng@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/s4_s905y4_ap222_linux.dts
+++ b/arch/arm64/boot/dts/amlogic/s4_s905y4_ap222_linux.dts
@@ -1482,6 +1482,8 @@
 };
 &amhdmitx {
 	status = "okay";
+	/* hdcp ctrl 0: sysctrl, 1: drv, 2: linux app */
+	hdcp_ctl_lvl = <1>;
 };
 
 &drm_amhdmitx {
