--- a/arch/arm64/boot/dts/amlogic/sc2_s905x4_ah212_linux.dts
+++ b/arch/arm64/boot/dts/amlogic/sc2_s905x4_ah212_linux.dts
@@ -1507,6 +1507,8 @@
 
 &amhdmitx {
 	status = "okay";
+	/* hdcp ctrl 0:sysctrl, 1: drv, 2: linux app */
+	hdcp_ctl_lvl = <1>;
 };
 
 /*if you want to use vdin just modify status to "ok"*/
