--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar301.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar301.dts
@@ -240,13 +240,15 @@
 		/***************************************************
 		 * en_4k: t5d not support 4k
 		 ***************************************************/
-		//en_4k = <0>;
-		//keep_dec_vf = <0>;
-		//po_fmt = <0>;
+		en_4k = <1>;
+		keep_dec_vf = <2>;
+		po_fmt = <6>;
 		/***************************************************
-		 * post_nub: default is 7
+		 * post_nub: default is 11 (T7/T3/SC2/S4 new path)
+		 * local 7*4075520 = 28
+		 * post 11*5222400 = 56
 		 ***************************************************/
-		//post_nub = <7>;
+		post_nub = <11>;
 	};
 
 	/* for external keypad */
