--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1290,8 +1290,9 @@
 		memory-region = <&logo_reserved>;
 		status = "disabled";
 		interrupts = <GIC_SPI 197 IRQ_TYPE_EDGE_RISING
+			GIC_SPI 194 IRQ_TYPE_EDGE_RISING
 			GIC_SPI 215 IRQ_TYPE_EDGE_RISING>;
-		interrupt-names = "viu-vsync", "rdma";
+		interrupt-names = "viu-vsync", "viu2-vsync", "rdma";
 		/* uboot logo,fb0/fb1 memory size,if afbcd fb0=0x01851000*/
 		display_mode_default = "1080p60hz";
 		scale_mode = <1>;
