--- a/arch/arm64/configs/meson64_a64_P_defconfig
+++ b/arch/arm64/configs/meson64_a64_P_defconfig
@@ -383,6 +383,7 @@ CONFIG_GPIO_SYSFS=y
 CONFIG_POWER_AVS=y
 # CONFIG_HWMON is not set
 CONFIG_THERMAL=y
+CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=200
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_DEFAULT_GOV_POWER_ALLOCATOR=y
 CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
