--- a/arch/arm64/configs/meson64_a64_R_defconfig
+++ b/arch/arm64/configs/meson64_a64_R_defconfig
@@ -398,6 +398,7 @@ CONFIG_POWER_AVS=y
 # CONFIG_HWMON is not set
 CONFIG_THERMAL=y
 CONFIG_THERMAL_STATISTICS=y
+CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=200
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_DEFAULT_GOV_POWER_ALLOCATOR=y
 CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
