vpp: t3: add vpu security support [1/1]
PD#SWPL-47731

Problem:
add vpu security support for new chip

Solution:
add vpu security support for new chip

Verify:
t3-ar301

Signed-off-by: Cao Jian <jian.cao@amlogic.com>
Change-Id: I9a1bab66f8e479feb5cd44d341728d2a668e43b3

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1425,6 +1425,13 @@
 		interrupt-names = "vsync", "vsync_viu2", "pre_vsync";
 	};
 
+	vpu_security {
+		compatible = "amlogic, meson-t3, vpu_security";
+		status = "okay";
+		interrupts = <GIC_SPI 220 IRQ_TYPE_EDGE_RISING>;
+		interrupt-names = "vpu_security";
+	};
+
 	multi-di {
 		compatible = "amlogic, dim-t3";
 		status = "okay";
