bt656: add bt656 support [1/1]
PD#SWPL-49246

Problem:
t3 not support bt656

Solution:
add t3 bt656

Verify:
t982-ar301

Signed-off-by: qiang.liu <qiang.liu@amlogic.com>
Change-Id: Ie1d66d5c9efb85b6edcb9284bf0b19a788b34fe7

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1051,6 +1051,23 @@
 			tv_bit_mode = <0x15>;
 		};
 
+		amvdec_656in {
+			/*bt656 gpio conflict with i2c0*/
+			compatible = "amlogic, bt656in-t3";
+			dev_name = "amvdec_656in";
+			status = "okay";
+			reg = <0x0 0xfe0ba000 0x0 0x7c>;
+			clocks = <&clkc CLKID_BT656_CLK>,
+				<&clkc CLKID_SYS_CLK_BT656_PCLK>;
+			clock-names = "cts_bt656_clk1",
+				"clk_gate_bt656_pclk1";
+			/* bt656in1, bt656in2 */
+			bt656in1 {
+				bt656_id = <1>;
+				status = "okay";
+			};
+		};
+
 		/* eARC */
 		audio_earc: bus@fe333000 {
 			compatible = "simple-bus";
