deintlace: enable sct_mem for 4k [1/1]
PD#SWPL-49255

Problem:
enable sct_mem

Solution:
1. when 4k enable sct_mem

Verify:
t3

Change-Id: I800bbe5a592ec61007b48162b95839ab390b7a1e
Signed-off-by: qianqian.cai <qianqian.cai@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1445,8 +1445,9 @@
 		 * po_fmt---1: NV21/8;  2: nv12/8;  3: AFBC 422/10BIT;
 		 *          4: dynamic(4K AFBC,10/422);
 		 *          6: dynamic(from decoder 4K source,out is AFBC,10/420),other is 422/10BIT
-		 * bypass_mem---0:nr not bypass,  1: nr bypass;2: when 4k input ,nr is bypass;
+		 * bypass_mem---0:nr not bypass; 1: nr bypass; 2: when 4k input ,nr is bypass;
 		 *              3: bypass nr for 4k,but not from vdin;
+		 * alloc_sct---0:not support; bit 0: for 4k; bit 1: for 1080p
 		 ***************************************************/
 	};
 
