--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar311.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar311.dts
@@ -251,6 +251,12 @@
 		 * post 11*5222400 = 56
 		 ***************************************************/
 		post_nub = <11>;
+		/***************************************************
+		 * 0:not support
+		 * bit 0: for 4k
+		 * bit 1: for 1080p
+		 ***************************************************/
+		alloc_sct = <1>;
 	};
 
 	/* for external keypad */
