audio: tm2 add ACODEC power-domains and acodec_clk [1/1]
PD#SWPL-49074

Problem:
TM2 audio caused serror

Solution:
add ACODEC power-domains and acodec_clk

Verify:
tm2

Change-Id: I4209335a6613ad2da7956f7b10a69d3c92cfb810
Signed-off-by: zirui.xiao <zirui.xiao@amlogic.com>

--- a/arch/arm/boot/dts/amlogic/meson-tm-common.dtsi
+++ b/arch/arm/boot/dts/amlogic/meson-tm-common.dtsi
@@ -17,6 +17,7 @@
 #include <dt-bindings/clock/amlogic,tm2-audio-clk.h>
 #include "meson-ir-map.dtsi"
 #include "mesong12a-bifrost.dtsi"
+#include <dt-bindings/power/meson-tm2-power.h>
 
 / {
 	interrupt-parent = <&gic>;
@@ -71,11 +72,14 @@
 	tl1_codec:codec {
 		#sound-dai-cells = <0>;
 		compatible = "amlogic, tm2_revb_acodec";
+		power-domains = <&pwrc PWRC_TM2_ACODEC_ID>;
 		status = "okay";
 		reg = <0xff632000 0x1c>;
 		tdmout_index = <0>;
 		tdmin_index = <0>;
 		dat1_ch_sel = <1>;
+		clocks = <&clkc CLKID_ACODEC>;
+		clock-names = "acodec_clk";
 	};
 
 	soc {
