--- a/arch/arm64/boot/dts/amlogic/meson-tm2.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-tm2.dtsi
@@ -884,6 +884,11 @@
 			times = <12>;
 		};
 	};
+	dolby_fw: dolby_fw {
+		compatible = "amlogic, dolby_fw";
+		mem_size = <0x100000>;
+		status = "okay";
+	};
 };
 
 &gpu{
