--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
@@ -823,7 +823,7 @@
 	aml_frc {
 		compatible = "amlogic, t3_frc";
 		dev_name = "aml_frc";
-		status = "disabled";
+		status = "okay";
 		frc_en = <1>;/*1:enabel ;0:disable*/
 		frc_hw_pos = <0>;/*0:before postblend; 1:after postblend*/
 		interrupts = <GIC_SPI 286 IRQ_TYPE_EDGE_RISING
@@ -832,10 +832,10 @@
 		interrupt-names = "irq_frc_in", "irq_frc_out", "irq_frc_rdma";
 		memory-region = <&frc_cma_reserved>;
 		clocks = <&clkc CLKID_FRC>, <&clkc CLKID_ME>;
+		clock-names = "clk_frc", "clk_me";
 		power-domains = <&pwrdm PDID_T3_FRCTOP>, <&pwrdm PDID_T3_FRCME>,
 				<&pwrdm PDID_T3_FRCMC>;
 		power-domain-names = "frc-top","frc-me","frc-mc";
-		clock-names = "clk_frc", "clk_me";
 		reg = <0x0 0xFF050000 0x0 0x30000 /*frc reg*/
 		       0x0 0xFE000000 0x0 0x300
 		       0x0 0xFF000000 0x0 0x10000>; /*frc clk reg*/
