rtc: system auto wake up after enter standby [1/1]
PD#SWPL-49377

Problem:
can't disabled rtc in uboot.

Solution:
add vrtc status in dtsi.

Verify:
T5D

Change-Id: If6905a128d03c4cc6be32298c9af6f7f20dd0451
Signed-off-by: Zhenxin Pu <zhenxin.pu@amlogic.com>

--- a/arch/arm/boot/dts/amlogic/meson-sc2.dtsi
+++ b/arch/arm/boot/dts/amlogic/meson-sc2.dtsi
@@ -235,6 +235,7 @@
 	vrtc: rtc@0xfe010288 {
 		compatible = "amlogic,meson-vrtc";
 		reg = <0xfe010288 0x4>;
+		status = "okay";
 	};
 
 	audio_data: audio_data {
