--- a/arch/arm64/boot/dts/amlogic/mesont5d_reva.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont5d_reva.dtsi
@@ -302,6 +302,7 @@
 	vrtc: rtc@0xfe010288 {
 		compatible = "amlogic,meson-vrtc";
 		reg = <0x0 0xff8000a8 0x0 0x4>;
+		status = "okay";
 	};
 
 	reboot {
