--- a/arch/arm64/boot/dts/amlogic/mesont7.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont7.dtsi
@@ -341,6 +341,7 @@
 	vrtc: rtc@0xfe010288 {
 		compatible = "amlogic,meson-vrtc";
 		reg = <0x0 0xfe010288 0x0 0x4>;
+		status = "okay";
 	};
 
 	pwrdm: power-domains {
