--- a/arch/arm64/boot/dts/amlogic/tm2_t962e2_ab311.dts
+++ b/arch/arm64/boot/dts/amlogic/tm2_t962e2_ab311.dts
@@ -334,9 +334,8 @@
 
 	tvafe_avin_detect {
 		compatible = "amlogic, tm2_tvafe_avin_detect";
-		status = "disabled";
+		status = "okay";
 		device_mask = <1>;/*bit0:ch1;bit1:ch2*/
-		reg = <0x0 0xffd0f090 0x0 0x20>;/*cbus register*/
 		interrupts = <0 12 1>,
 			<0 13 1>;
 	};
@@ -777,11 +776,10 @@
 	tvafe {
 		compatible = "amlogic, tvafe-tm2_b";
 		/*memory-region = <&tvafe_cma_reserved>;*/
-		status = "disabled";
+		status = "okay";
 		flag_cma = <1>;/*1:share with codec_mm;0:cma alone*/
 		cma_size = <5>;/*MByte*/
-		reg = <0x0 0xff654000 0x0 0x2000 /*tvafe reg base*/
-				0x0 0xff63c000 0x0 0x2000>; /*hiu reg base*/
+		reg = <0x0 0xff654000 0x0 0x2000>; /*tvafe reg base*/
 		reserve-iomap = "true";
 		tvafe_id = <0>;
 		//pinctrl-names = "default";
@@ -803,7 +801,7 @@
 
 	vbi {
 		compatible = "amlogic, vbi";
-		status = "disabled";
+		status = "okay";
 		interrupts = <0 83 1>;
 	};
 
