arm64: dts: meson: VIM1S: fix pwm_ef with 40-Pin Header
Signed-off-by: Yan Wang <frank@khadas.com>
Change-Id: I8394a93b3d97f3cb0ef7d30197dbe1c0b92d736c

--- a/arch/arm64/boot/dts/amlogic/kvim1s.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim1s.dts
@@ -1317,7 +1317,7 @@
 };
 
 &pwm_ef {
-	pinctrl-0 = <&pwm_e_pins1>;
+	pinctrl-0 = <&pwm_f_pins2>;
 	pinctrl-names = "default";
 	status = "okay";
 };
