arm64: dts: meson: VIM1S: fix spdif out
Signed-off-by: Yan Wang <frank@khadas.com>
Change-Id: I011a7b28e7ab8d102c6ea68c2f0d83c8925c12ed

--- a/arch/arm64/boot/dts/amlogic/kvim1s.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim1s.dts
@@ -1062,15 +1062,15 @@
 	};
 
 	spdifout: spdifout {
-		mux { /* GPIOH_4 */
-			groups = "spdif_out_h";
+		mux { /* GPIOZ_9 */
+			groups = "spdif_out_z";
 			function = "spdif_out";
 		};
 	};
 
 	spdifout_a_mute: spdifout_a_mute {
-		mux { /* GPIOH_4 */
-			groups = "GPIOH_4";
+		mux { /* GPIOZ_9 */
+			groups = "GPIOZ_9";
 			function = "gpio_periphs";
 			output-low;
 		};
