--- a/arch/arm64/boot/dts/amlogic/meson-s4.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-s4.dtsi
@@ -2036,9 +2036,9 @@
 		compatible = "amlogic, aml-wifi";
 		status = "disabled";
 		irq_trigger_type = "GPIO_IRQ_LOW";
-		//dhd_static_buf; /* if use bcm wifi, config dhd_static_buf */
-		//pinctrl-0 = <&pwm_e_pins>;
-		//pinctrl-names = "default";
+		dhd_static_buf; /* if use bcm wifi, config dhd_static_buf */
+		pinctrl-0 = <&pwm_e_pins1>;
+		pinctrl-names = "default";
 		pwm_config = <&wifi_pwm_conf>;
 	};
 
