arm64: dts: VIM1S: add RTC support
Signed-off-by: Yan Wang <frank@khadas.com>
Change-Id: I764abe9821fddd87ba8c08ebae22b0a9d3a76bbc

--- a/arch/arm64/boot/dts/amlogic/kvim1s.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim1s.dts
@@ -641,6 +641,10 @@
 	pinctrl-0=<&i2c1_pins2>;
 	clock-frequency = <300000>; /* default 100k */
 
+	hym8563-rtc {
+		compatible = "haoyu,hym8563";
+		reg = <0x51>;
+	};
 };
 
 &vddcpu0 {
